# libpesession

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml
include/pesession/: pesession.hpp  pesession_to_osession.hpp  profile.hpp
src/: pesession.cpp  pesession_to_osession.cpp
tests/: test_smoke.cpp
